Remove Java 9 options for bootRun task
We currently want to build Java 8 compatible artifacts, so gradle needs
to be configured to use JDK 8. These arguments make the bootRun task
fail when used with JDK 8, hence the removal.