@@ -18,10 +18,6 @@ dependencies {
     compile 'com.h2database:h2:1.4.196'
 }
 
-bootRun {
-    jvmArgs = ['--add-modules', 'java.xml.bind']
-}
-
 docker {
     name "${rootProject.dockerUser}/livedoc-demo"
     tags 'latest', project.version
